Add update and delete comments
